--- a/nextjs-practice/package.json
+++ b/nextjs-practice/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "apollo-server-micro": "^3.11.1",
     "next": "13.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0"
